mwDev/mwDev/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Mannai_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account Mannai Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Submission_Date__c</fullName>
        <description>Date when a bid or tender needs to be or was submitted to the customer</description>
        <inlineHelpText>Date when a bid or tender needs to be or was submitted to the customer</inlineHelpText>
        <label>Bid Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Units__c</fullName>
        <formula>Owner.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Customer_Name__c</fullName>
        <label>Cash Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_By_Sales_User__c</fullName>
        <description>This will be a hidden field. This field was created in order to store the close date updated by any user other than integration user. If a user changes the close date in Salesforce directly, it should not get overridden by ManERP Close Date. This field will be updated using WF field update.</description>
        <inlineHelpText>This will be a hidden field. This field was created in order to store the close date updated by any user other than integration user. If a user changes the close date in Salesforce directly, it should not get overridden by ManERP Close Date.</inlineHelpText>
        <label>Close Date By Sales User</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Order_Reference_Number__c</fullName>
        <label>Contract/Order Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enquiry_No__c</fullName>
        <externalId>true</externalId>
        <label>Enquiry No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Estimated_GM_Value__c</fullName>
        <formula>Amount *  Estimated_GM__c</formula>
        <label>Estimated GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_GM__c</fullName>
        <inlineHelpText>Estimated gross margin (%)</inlineHelpText>
        <label>Estimated GM (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_ICT_BU_s__c</fullName>
        <label>Multiple ICT BUs</label>
        <picklist>
            <picklistValues>
                <fullName>Single BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes on revenue timing (contract dates)</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>O-{00000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protection__c</fullName>
        <label>Protection</label>
        <picklist>
            <picklistValues>
                <fullName>Protected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Protected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_No__c</fullName>
        <externalId>true</externalId>
        <label>Quotation No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Created_Date__c</fullName>
        <description>Quote Created Date captured from ManERP</description>
        <inlineHelpText>Captures Quote Created Date from ManERP</inlineHelpText>
        <label>Quote Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <description>The salesman will receive an email reminding him/her of the opportunity.</description>
        <label>Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Man_ID__c</fullName>
        <label>Sales Man ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>HPE ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE SWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE TCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPE Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommVault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetuuiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TrendMicro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LanDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firemon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Analytics &amp; ECM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Business_Units__c</columns>
        <columns>Quotation_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Manweir</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Presentation,Proposal/Price Quote,Negotiation/Review</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>HeadOffice</fullName>
        <filterScope>Everything</filterScope>
        <label>Head Office Opps</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Quotation_No__c</columns>
        <columns>Business_Units__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Estimated_GM_Value__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Manweir</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cash_Customer_Name_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>Account_Mannai_Id__c =&apos;CASH CUSTOMER&apos; &amp;&amp; ISBLANK( Cash_Customer_Name__c )</errorConditionFormula>
        <errorMessage>Please fill Cash Customer Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_after_Start_Date</fullName>
        <active>true</active>
        <description>The End Date has to be same or later than Start Date</description>
        <errorConditionFormula>Contract_End_Date__c &lt; Contract_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GM_Percentage</fullName>
        <active>true</active>
        <description>GM% cannot be blank or 0</description>
        <errorConditionFormula>AND(
OR(
ISBLANK(Estimated_GM__c ),
Estimated_GM__c &lt;=0,
Estimated_GM__c &gt;100
),
IsClosed=TRUE)</errorConditionFormula>
        <errorDisplayField>Estimated_GM__c</errorDisplayField>
        <errorMessage>Please fill in an Estimated GM% bigger than 0% and smaller than 100%!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_closed_opportunity_all_fields_Lost</fullName>
        <active>false</active>
        <description>No one can edit anything once deal is closed except from the system administrator.</description>
        <errorConditionFormula>IF( 
CreatedDate &lt;&gt; NOW(), 
AND( 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;), 
NOT($Profile.Name=&quot;System Administrator&quot;), 
OR(($User.Id =&quot;005b0000003gFfk&quot;), 
($User.Id=&quot;005b0000003Cuzg&quot;), 
($User.Id=&quot;005b0000001Fn8k&quot;), 
($User.Id=&quot;005b0000003Cuzb&quot;), 
($User.Id=&quot;005b0000001k15j&quot;), 
($User.Id=&quot;005b0000002wgs0&quot;), 
($User.Id=&quot;005b0000003gmps&quot;), 
($User.Id=&quot;005b0000004MOkO&quot;), 
($User.Id=&quot;005b0000004YOxW&quot;), 
($User.Id=&quot;005b0000004YTAe&quot;))), 
AND( 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;), 
NOT($Profile.Name&lt;&gt;&quot;System Administrator&quot;)) 
)</errorConditionFormula>
        <errorMessage>You cannot change a deal after the deal is closed. Please contact Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_closed_opportunity_all_fields_Won</fullName>
        <active>false</active>
        <description>No one can edit anything once deal is closed except from the system administrator.</description>
        <errorConditionFormula>IF( 
CreatedDate &lt;&gt; NOW(), 
AND( 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;), 
NOT($Profile.Name=&quot;System Administrator&quot;), 
OR(($User.Id =&quot;005b0000003gFfk&quot;), 
($User.Id=&quot;005b0000003Cuzg&quot;), 
($User.Id=&quot;005b0000001Fn8k&quot;), 
($User.Id=&quot;005b0000003Cuzb&quot;), 
($User.Id=&quot;005b0000001k15j&quot;), 
($User.Id=&quot;005b0000002wgs0&quot;), 
($User.Id=&quot;005b0000003gmps&quot;), 
($User.Id=&quot;005b0000004MOkO&quot;), 
($User.Id=&quot;005b0000004YOxW&quot;), 
($User.Id=&quot;005b0000004YTAe&quot;))), 
AND( 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;), 
NOT($Profile.Name&lt;&gt;&quot;System Administrator&quot;)) 
)</errorConditionFormula>
        <errorMessage>You cannot change a deal after the deal is closed. Please contact Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_closed_oppostunity</fullName>
        <active>false</active>
        <description>AND( 
ISCHANGED( IsClosed), 
PRIORVALUE( IsClosed), 
NOT( IsClosed), 
NOT($Profile.Name = &quot;System Administrator&quot;))</description>
        <errorConditionFormula>AND( 
ISCHANGED( IsClosed), 
PRIORVALUE( IsClosed), 
NOT( IsClosed), 
$Profile.Name&lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>You cannot change a deal after the deal is closed. Please contact Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_lost_opportunities_from_editing</fullName>
        <active>true</active>
        <description>Users can close the opportunity upon creation but cannot change if it is closed. System admins can however, make the required changes.</description>
        <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   PRIORVALUE(LastModifiedDate) &lt; NOW(),
   OR(
      AND(        
           TEXT(StageName) = &apos;Closed Lost&apos;,
           NOT(ISCHANGED(StageName))
          ),
      AND(
           ISCHANGED(StageName),
           TEXT(PRIORVALUE(StageName)) = &apos;Closed Lost&apos;
         )
     )
  )</errorConditionFormula>
        <errorMessage>You cannot change a closed opportunity. Please contact your administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_won_opportunities_from_editing</fullName>
        <active>true</active>
        <description>Users can close the opportunity upon creation but cannot change if it is closed. System admins can however, make the required changes.</description>
        <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   PRIORVALUE(LastModifiedDate) &lt; NOW(),
   OR(
      AND(        
           TEXT(StageName) = &apos;Closed Won&apos;,
           NOT(ISCHANGED(StageName))
          ),
      AND(
           ISCHANGED(StageName),
           TEXT(PRIORVALUE(StageName)) = &apos;Closed Won&apos;
         )
     )
  )</errorConditionFormula>
        <errorMessage>You cannot change a closed opportunity. Please contact your administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Overdue_Creation</fullName>
        <active>true</active>
        <description>Open Opportunities are not allowed to have a close date in the past</description>
        <errorConditionFormula>AND(
IsClosed = False,
 CloseDate &lt;  TODAY() ,  $User.Username &lt;&gt; &apos;integration@mannai.com.qa&apos;)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Please select a Close Date in the future for open Opportunities!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_Date</fullName>
        <active>true</active>
        <description>When a deal is closed there has to be a start and end date.</description>
        <errorConditionFormula>AND(
OR(
TEXT( Contract_End_Date__c )=&quot;&quot;,
TEXT( Contract_Start_Date__c )=&quot;&quot;),
TEXT( StageName )=&quot;Closed Won&quot;,
$Profile.Name&lt;&gt;&quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
        <errorMessage>Please fill in a Contract Start and End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_after_close_Date</fullName>
        <active>true</active>
        <description>Contract Start Date cannot be before Close Date.</description>
        <errorConditionFormula>AND(
 Contract_Start_Date__c &lt; CloseDate ,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
        <errorMessage>Please select a Contract Start Date which is not before the Close Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>closed_date</fullName>
        <active>true</active>
        <description>Can&apos;t change to closed won if 
GM% blank or zero,
no start or end date,
close date in future</description>
        <errorConditionFormula>AND(
IsClosed = TRUE,
CloseDate &gt; TODAY (),
$Profile.Name&lt;&gt;&quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>The Close Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>closed_lost_past</fullName>
        <active>true</active>
        <description>Closed date can only be in the current month</description>
        <errorConditionFormula>And( 

$Profile.Name&lt;&gt;&quot;System Administrator&quot;, 
ISPICKVAL(StageName, &apos;Closed Lost&apos;), 
or(MONTH( CloseDate ) &lt; MONTH ( TODAY()),YEAR( CloseDate ) &lt; YEAR ( TODAY()))
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>The Close Date can only be in the current month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>closed_won_past</fullName>
        <active>true</active>
        <errorConditionFormula>And(

$Profile.Name&lt;&gt;&quot;System Administrator&quot;, 
ISPICKVAL(StageName, &apos;Closed Won&apos;), 
or(MONTH( CloseDate ) &lt; MONTH ( TODAY()),YEAR( CloseDate ) &lt; YEAR ( TODAY())) 

)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>The Close Date can only be in the current month.</errorMessage>
    </validationRules>
</CustomObject>